additional fixes to timers